<resources>
    <string name="app_name">Covid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="cp_hint">Confirm Password</string>
    <string name="already_account">Already have an account?</string>
    <string name="clk_login">Click here to log in.</string>
    <string name="sign_up_agree">By signing up you are agreeing to our</string>
    <string name="terms_of_srvcs">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="log_in">Log in</string>
    <string name="frgt_pass">Forgot password?</string>
    <string name="dnt_hv_account">Don\'t have an account?</string>
    <string name="clk_sign_up">Click here to sign up.</string>
    <string name="reset_pass">Reset Password</string>
    <string name="bck_login">Back to Login</string>
    <string name="err_email">Please enter valid email</string>
    <string name="err_pass">Please enter password</string>
    <string name="prof_account_info">ACCOUNT INFO</string>
    <string name="country">Country</string>
    <string name="geographical_info">GEOGRAPHICAL INFO</string>
    <string name="not_provided">Not provided</string>
    <string name="zip_code">Zip Code</string>
    <string name="health_info">HEALTH INFO</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="email_sent">Email sent.</string>
    <string name="err_rest_pass">Error resetting password</string>
    <string name="pls_wait">Please wait ...</string>
    <string name="health_conditions">Health Conditions</string>
    <string name="not_say">I\'d rather not say</string>
    <string name="imu_def">Prone to infections</string>
    <string name="cancr">Current Chemotherapy</string>
    <string name="chronic_kidney_disease">Kidney Diseases or Dialysis</string>
    <string name="hypertension">Hypertension</string>
    <string name="diabetes">Diabetes</string>
    <string name="cardiovascular_disease">Heart Disease</string>
    <string name="asthma">Asthma</string>
    <string name="chronic_lung_disease">COPD or Emphysema</string>
    <string name="are_you_a_smoker">Are you a smoker</string>
    <string name="yes">Yes</string>
    <string name="i_quit">I quit</string>
    <string name="never">Never</string>
    <string name="what_country">What country do you live in?</string>
    <string name="what_zip">What is your zip/postal code?</string>
    <string name="what_age">What is your age?</string>
    <string name="what_gender">What is your Gender?</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="how_are_you_feeling_right_now">How are you feeling right now?</string>
    <string name="keep_your_share_title">Keep your friends and family safe.Help researchers find the cure.Share this app with your community.</string>
    <string name="share">Share</string>
    <string name="share_txt">Track your COVID symptoms, keep your \nfamily and friends safe, and help \nresearchers find a cure. Go to \nhttp://covidsymptom.org/download</string>
    <string name="history">History</string>
    <string name="new_report">New Report</string>
    <string name="what_sym_do_u_hv">What Symptoms do you have?</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete account</string>
    <string name="terms_of_service">Terms Of Service</string>


</resources>
