<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/frgt_pass"
            android:textAppearance="?attr/textAppearanceHeadline4"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:id="@+id/email"
            android:textAppearance="?attr/textAppearanceHeadline5"/>
        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass"
            android:onClick="onResetPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bck_login"
            android:onClick="onBackLogin"
            android:textAppearance="?attr/textAppearanceSubtitle1"/>

    </LinearLayout>

</layout>
