<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--    <variable name="frag" type="com.covid.ui.profile.ProfileFragment" />-->
    <data>

        <variable
            name="hlthfrag"
            type="com.covid.ui.profile.HealthConditionFragment" />

        <variable
            name="hlthdata"
            type="com.covid.model.HealthConditions" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSilver"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/health_conditions" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/diabetes" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/diab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.diabetes}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/hypertension" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/hypr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.hypertension}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/cardiovascular_disease" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/crdio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.cardiovascularDisease}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/asthma" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/asthma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.asthma}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/chronic_lung_disease" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/chrnc_lung"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.chronicLungDisease}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/chronic_kidney_disease" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/chrnc_kdny"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.chronicKidneyDisease}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/cancr" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cnr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.cancer}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/imu_def" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/imudef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.immunodeficiency}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/not_say" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/silnt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:checked="@{hlthdata.idRatherNotSay}" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/are_you_a_smoker"
                            android:layout_centerVertical="true"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true">

                            <com.google.android.material.checkbox.MaterialCheckBox
                                android:id="@+id/smkng_ys"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"
                                android:textAlignment="gravity" />

                            <com.google.android.material.checkbox.MaterialCheckBox
                                android:id="@+id/smkng_qt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/i_quit"
                                android:textAlignment="gravity" />

                            <com.google.android.material.checkbox.MaterialCheckBox
                                android:id="@+id/smkng_nvr"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/never" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</layout>