<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_howfeeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/how_are_you_feeling_right_now"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <RelativeLayout
        android:id="@+id/rlayout_btns"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_well"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_well"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginLeft="40dp"
            android:id="@+id/btn_unwell"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@+id/btn_well"
            app:srcCompat="@drawable/ic_unwell"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/keep_your_share_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.appcompat.widget.AppCompatImageView
        android:padding="10dp"
        app:srcCompat="@drawable/ic_share_black_48dp"
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="90dp"
        android:onClick="share"
        android:text="@string/share"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_share"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/keep_your_share_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceSubtitle1" />
</RelativeLayout>